language settings added

--- a/login.css
+++ b/login.css
@@ -2,7 +2,7 @@ body{
 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
-    background-color: #f3f3ff;
+    background-color: #f6fcfd;
 }
 
 label{
