--- a/login.css
+++ b/login.css
@@ -3,10 +3,11 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
     background-color: #f6fcfd;
+
 }
 
 label{
-    
+
     width: 100px;
     display:block;
     text-align: right;
@@ -16,12 +17,17 @@ label{
     color:#000066;
 }
 
+#change label{
+
+    width: 180px;
+}
+
 fieldset{
 
     border: 1px solid #000066;
     padding:00px 20px 20px 0;
-    margin: 0 0 0 0;
-    background:#DDDDFF
+    margin: 0 auto;
+    background:#DDDDFF;
 }
 
 legend{
@@ -29,36 +35,76 @@ legend{
     padding: 0px 6px
 } 
 
-
 form {
+
     font:100%;
-    margin:0;
+    margin:0 auto;
     padding:0;
     min-width: 300px;
-    max-width: 400px;
+
+}
+form#lg{
+
     width: 360px;
+
 }
 
+form#change{
+
+    width: 600px;
+}
 .subm{
+
     width:80px;
 }
 
-
 form br {
+
     clear:left;
 }
 
 form input, form textarea {
+
     display: inline; 
     width:150px;     
     margin:5px 0 0 0; 
 
 }
-#top{
-    padding-top: 50px;
+
+#change table{
+
+    padding: 0 0 0 50px;
+    border: 0;
+    width:600px;
 }
+
+#change td{
+
+    width: 150px;
+}
+
+#top{
+
+    padding-top: 50px;
+    text-align: center;
+}
+
 #lgerror{
+
     color: red;
     height:20px;
     margin-bottom: 10px;
+}
+
+#passstr{
+
+    color:#888;
+    font-size:10px;
+    display:inline-block;
+    text-align: left;
+    padding-left: 14px;
+}
+#changemsg{
+    height:20px; 
+    color:green;
 }
