--- a/login.css
+++ b/login.css
@@ -25,7 +25,7 @@ label{
 fieldset{
 
     border: 1px solid #000066;
-    padding:00px 20px 20px 0;
+    padding:0 0 20px 0;
     margin: 0 auto;
     background:#DDDDFF;
 }
@@ -110,4 +110,34 @@ form input, form textarea {
 }
 .error{
     color: red;
+}
+#login{
+    float: right;
+    margin: 20px 50px 0 0;
+}
+#content{
+    border: 1px solid #000066;
+    padding: 20px 0 20px 20px;
+    margin: 50px auto 0 auto;
+    background:#DDDDFF;
+    width: 600px;
+    text-align: left;
+    
+}
+#content ul{
+    padding-left: 70px;
+    color: #000099;
+    
+}
+#content h1{
+    color: #555;
+    font-size: 16px;
+}
+#content p{
+    color: #555;
+}
+a{
+
+    color: #000099;
+    
 }
