fixed docblocks, comments, spelling, and function position

--- a/demo/login.css
+++ b/demo/login.css
@@ -2,7 +2,8 @@
 /**
  *
  * login.css
- * 
+
+ * This is a TEMPORARY SCRIPT for demonstration and development purposes only
  * 
  * @package CRLogin
  * @subpackage demo
